# DroneTrackerDemo

./: .gitignore  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/jni/: NativeTrackerBridge.cpp
app/src/main/cpp/tracker/: ITracker.h  NanoTrackerEngine.cpp  NanoTrackerEngine.h  NcnnTrackerImpl.cpp  NcnnTrackerImpl.h  RknnTrackerImpl.cpp  RknnTrackerImpl.h  TrackerTypes.h
app/src/main/java/com/example/dronetracker/: EvalCsvLogger.kt  EvaluationActivity.kt  MainActivity.kt  OpenCVTrackerAnalyzer.kt  Phase1TrialLogger.kt  TrackingOverlayView.kt  VideoReplayRunner.kt
app/src/main/java/com/example/dronetracker/nativebridge/: NativeTrackerBridge.kt
app/src/main/res/layout/: activity_evaluation.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
docs/: OPTIMIZATION_PLAN.md  OPTIMIZATION_RETROSPECTIVE_20260330.md  OPTIMIZATION_RETROSPECTIVE_20260413.md  P1_AB_EVAL_CHECKLIST.md  P1_AB_RUN_20260414.md  REQUIREMENTS.md  TECHNICAL_ARCHITECTURE.md  analysis_results-20260416.md  dev-environment-guardrails.md  implementation_plan-0417.md  mvp5_acceptance_20260421.md  mvp5_l1_acceptance_20260421.md  phase1_manual_roi_selection_plan.md  phase1_t42_closure_20260426.md  phase1_t43_probe_evidence_20260425.md  phase1_trial_guide.md  template_optimization_plan.md
tools/: adb_exec.ps1  dev-env.ps1  fix-dev-permissions.ps1  gradlew_exec.ps1  gradlew_jbr.ps1
tools/auto_tune/: analyze_eval_csv.py  parse_manual_roi_probe.py  sweep_replay.py
tools/backbone_probe/: analyze_native_score.py
tools/eval/: capture_tracker_metrics.py  run_ab_median.py
tools/replay_assets/: eval_ncnn_latest.csv
tools/replay_sop/: mvp5_windows_fail.json  mvp5_windows_l1.json  mvp5_windows_l2.json  mvp5_windows_l3.json  p0_windows.json  run_mvp5_variant.ps1
