cmake_minimum_required(VERSION 3.22.1)
project(dronetracker_native)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_library(
    dronetracker_native
    SHARED
    jni/NativeTrackerBridge.cpp
    tracker/NanoTrackerEngine.cpp
    tracker/NcnnTrackerImpl.cpp
    tracker/RknnTrackerImpl.cpp
)

target_include_directories(
    dronetracker_native
    PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
)

find_library(log-lib log)
find_library(android-lib android)

target_link_libraries(
    dronetracker_native
    ${log-lib}
    ${android-lib}
)
